# INVMMC

./: README.md
01-INVMMC/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
01-INVMMC/deploy/: invmmc-api.service  invmmc-bridge.service
01-INVMMC/docs/: 01-financial-control-process.md  02-system-architecture.md  03-rbac-raci.md  04-integration-strategy.md  05-implementation-roadmap.md  06-telegram-chatbot-token-data-flow.md  07-antigravity-backend-contract.md  08-ai-phan-tich-thu-chi.md  09-multi-user-bot.md  10-trien-khai-production.md
01-INVMMC/scripts/: telegram_polling.py
01-INVMMC/src/invmmc/: __init__.py  main.py
01-INVMMC/src/invmmc/api/: routes.py  schemas.py
01-INVMMC/src/invmmc/core/: config.py  database.py  imaging.py  security.py
01-INVMMC/src/invmmc/domain/: __init__.py  entities.py  enums.py  policies.py
01-INVMMC/src/invmmc/integrations/: bank.py  email_sender.py  local_ai.py  momo.py  telegram.py
01-INVMMC/src/invmmc/persistence/: __init__.py  bootstrap.py  models.py
01-INVMMC/src/invmmc/services/: approval.py  auth.py  budget.py  expense_intake.py  integration_health.py  reconciliation.py  report_export.py  reporting.py  telegram_bots.py  telegram_commands.py  telegram_intake.py
01-INVMMC/src/invmmc/static/: app.js  dashboard.html  forgot-password.html  login.html  reset-password.html  styles.css
01-INVMMC/tests/: test_approval_policy.py  test_dashboard_api.py  test_intake_and_reconciliation.py  test_password_reset.py  test_telegram_attachment_storage.py
